--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-curl-cffi==0.7.3
+annotated-types==0.7.0
+certifi==2024.8.30
+cffi==1.17.1
+curl_cffi==0.7.3
+greenlet==3.0.3
 msgspec==0.18.6
 playwright==1.47.0
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+pyee==12.0.0
+SQLAlchemy==2.0.36
+sqlmodel==0.0.22
+typing_extensions==4.12.2
